[gd_scene load_steps=43 format=3 uid="uid://con5vhgq7mvmj"]

[ext_resource type="Script" path="res://Assets/Player/player.gd" id="1_0mw0a"]
[ext_resource type="Texture2D" uid="uid://c2j6f14sep3vg" path="res://Assets/Player/PlayerIdle.png" id="2_tsqo8"]
[ext_resource type="Texture2D" uid="uid://d3ad4phjnkvd1" path="res://Assets/Player/PlayerMove.png" id="3_ofp2v"]
[ext_resource type="Texture2D" uid="uid://c68ynjwu4q374" path="res://Assets/Player/PlayerHit.png" id="4_ssaxr"]

[sub_resource type="Animation" id="Animation_dt70c"]
resource_name = "HitDown"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HitSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [9, 10, 11]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"attack_animation_finished"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitboxPivot:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.5708]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HitboxPivot/StaffHitbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.1, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_nbpdk"]
resource_name = "HitLeft"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HitSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [5, 6, 7]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"attack_animation_finished"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitboxPivot:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [3.14159]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HitboxPivot/StaffHitbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.1, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_6uoyk"]
resource_name = "HitRight"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HitSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [1, 2, 3]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"attack_animation_finished"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitboxPivot:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HitboxPivot/StaffHitbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.1, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_06t7t"]
resource_name = "HitUp"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HitSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [13, 14, 15]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"attack_animation_finished"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitboxPivot:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [4.71239]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HitboxPivot/StaffHitbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.1, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_5hnx6"]
resource_name = "IdleDown"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("IdleSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 0, 1, 2, 3, 4, 5, 6]
}

[sub_resource type="Animation" id="Animation_4lrni"]
resource_name = "IdleLeft"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("IdleSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19, 20, 21, 22, 23]
}

[sub_resource type="Animation" id="Animation_xraol"]
resource_name = "IdleRight"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("IdleSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11, 12, 13, 14, 15]
}

[sub_resource type="Animation" id="Animation_q1wd3"]
resource_name = "IdleUp"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("IdleSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27, 28, 29, 30, 31]
}

[sub_resource type="Animation" id="Animation_jlito"]
resource_name = "MoveDown"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MoveSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_yrloa"]
resource_name = "MoveLeft"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MoveSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15]
}

[sub_resource type="Animation" id="Animation_ve1h5"]
resource_name = "MoveRight"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MoveSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_3qc1l"]
resource_name = "MoveUp"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MoveSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_dkllb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("IdleSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MoveSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HitboxPivot:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("HitboxPivot/StaffHitbox/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_f2g5x"]
_data = {
"HitDown": SubResource("Animation_dt70c"),
"HitLeft": SubResource("Animation_nbpdk"),
"HitRight": SubResource("Animation_6uoyk"),
"HitUp": SubResource("Animation_06t7t"),
"IdleDown": SubResource("Animation_5hnx6"),
"IdleLeft": SubResource("Animation_4lrni"),
"IdleRight": SubResource("Animation_xraol"),
"IdleUp": SubResource("Animation_q1wd3"),
"MoveDown": SubResource("Animation_jlito"),
"MoveLeft": SubResource("Animation_yrloa"),
"MoveRight": SubResource("Animation_ve1h5"),
"MoveUp": SubResource("Animation_3qc1l"),
"RESET": SubResource("Animation_dkllb")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_bi63c"]
animation = &"HitLeft"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_dqt44"]
animation = &"HitDown"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_idmvc"]
animation = &"HitRight"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_hlk8h"]
animation = &"HitUp"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_gtim0"]
blend_point_0/node = SubResource("AnimationNodeAnimation_bi63c")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_dqt44")
blend_point_1/pos = Vector2(0, 0.9)
blend_point_2/node = SubResource("AnimationNodeAnimation_idmvc")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_hlk8h")
blend_point_3/pos = Vector2(0, -0.9)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_5l2i4"]
animation = &"IdleLeft"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_gyyns"]
animation = &"IdleDown"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_q54ey"]
animation = &"IdleRight"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_51i5t"]
animation = &"IdleUp"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_h26ik"]
blend_point_0/node = SubResource("AnimationNodeAnimation_5l2i4")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_gyyns")
blend_point_1/pos = Vector2(0, 0.9)
blend_point_2/node = SubResource("AnimationNodeAnimation_q54ey")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_51i5t")
blend_point_3/pos = Vector2(0, -0.9)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_j7vd8"]
animation = &"MoveLeft"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_tiye1"]
animation = &"MoveDown"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_04his"]
animation = &"MoveRight"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_2tl1t"]
animation = &"MoveUp"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_fpr1v"]
blend_point_0/node = SubResource("AnimationNodeAnimation_j7vd8")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_tiye1")
blend_point_1/pos = Vector2(0, 0.9)
blend_point_2/node = SubResource("AnimationNodeAnimation_04his")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_2tl1t")
blend_point_3/pos = Vector2(0, -0.9)
min_space = Vector2(-1, -0.9)
max_space = Vector2(1, 0.9)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_3rwpx"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_sbl7y"]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_v68qs"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_vquta"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_gnesb"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_wcmgg"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_2q512"]
states/Attack/node = SubResource("AnimationNodeBlendSpace2D_gtim0")
states/Attack/position = Vector2(552.323, 13.1025)
states/Idle/node = SubResource("AnimationNodeBlendSpace2D_h26ik")
states/Idle/position = Vector2(373.5, 100)
states/Move/node = SubResource("AnimationNodeBlendSpace2D_fpr1v")
states/Move/position = Vector2(552, 99.75)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_3rwpx"), "Move", "End", SubResource("AnimationNodeStateMachineTransition_sbl7y"), "Idle", "Move", SubResource("AnimationNodeStateMachineTransition_v68qs"), "Idle", "Attack", SubResource("AnimationNodeStateMachineTransition_vquta"), "Attack", "Idle", SubResource("AnimationNodeStateMachineTransition_gnesb"), "Move", "Idle", SubResource("AnimationNodeStateMachineTransition_wcmgg")]
graph_offset = Vector2(-15.8551, -34.8975)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_w6h8t"]
radius = 5.99879
height = 17.9964

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rnijg"]
height = 34.0

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_0mw0a")

[node name="IdleSprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -13)
texture = ExtResource("2_tsqo8")
hframes = 32

[node name="MoveSprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -13)
texture = ExtResource("3_ofp2v")
hframes = 16

[node name="HitSprite" type="Sprite2D" parent="."]
position = Vector2(0, -13)
texture = ExtResource("4_ssaxr")
hframes = 16

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_f2g5x")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_2q512")
anim_player = NodePath("../AnimationPlayer")
parameters/Attack/blend_position = Vector2(0.0369231, -0.675439)
parameters/Idle/blend_position = Vector2(-0.0051282, 0.752632)
parameters/Move/blend_position = Vector2(0.664615, 0.0157894)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2.13511e-08, -3)
rotation = 1.59089
shape = SubResource("CapsuleShape2D_w6h8t")

[node name="HitboxPivot" type="Marker2D" parent="."]
position = Vector2(0, -11)

[node name="StaffHitbox" type="Area2D" parent="HitboxPivot"]
position = Vector2(21, 2.08165e-12)

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxPivot/StaffHitbox"]
position = Vector2(2.08165e-12, 2.08165e-12)
shape = SubResource("CapsuleShape2D_rnijg")
disabled = true

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)
limit_left = 0
limit_top = 0
limit_right = 960
limit_bottom = 540
